fix: align z-index with "sticky" level

--- a/packages/modules/data-widgets/src/themesource/datawidgets/web/_datagrid-filters.scss
+++ b/packages/modules/data-widgets/src/themesource/datawidgets/web/_datagrid-filters.scss
@@ -70,7 +70,7 @@ $dg-item-min-height: 32px;
     padding: 0;
     margin: 0;
     background: var(--bg-color-secondary, $dg-background-color);
-    z-index: 55;
+    z-index: 51;
     border-radius: 8px;
     list-style-type: none;
     box-shadow: 0 2px 20px 1px rgba(5, 15, 129, 0.05), 0 2px 16px 0 rgba(33, 43, 54, 0.08);
