--- a/packages/modules/data-widgets/src/themesource/datawidgets/web/_datagrid-scroll.scss
+++ b/packages/modules/data-widgets/src/themesource/datawidgets/web/_datagrid-scroll.scss
@@ -1,7 +1,7 @@
 .container-stuck + .table .th {
     position: -webkit-sticky; /* Safari */
     position: sticky;
-    z-index: 10;
+    z-index: 50;
 }
 
 /**
@@ -10,7 +10,7 @@
  * If we moved headers out of the grid body, please, remove this piece of guano.
  */
 .container-stuck + .table .th:has(.filter-selectors.visible) {
-    z-index: 20;
+    z-index: 51;
 }
 
 .widget-datagrid-content.infinite-loading {
